# kryne-engine

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  install-dependencies.bat  install-dependencies.sh
Examples/Basic/: Basic.cpp  CMakeLists.txt  PerspectiveHelper.cpp  PerspectiveHelper.hpp  main.cpp
Examples/BenchmarkThreading/: CMakeLists.txt  WorkComponent.cpp  WorkComponent.hpp
Examples/VulkanTest/: BufferHelpers.cpp  BufferHelpers.hpp  CMakeLists.txt  DebuggingUtils.hpp  HelloTriangleApp.cpp  HelloTriangleApp.hpp  Queue.cpp  Queue.hpp  SwapChain.cpp  SwapChain.hpp  SwapQueue.cpp  SwapQueue.hpp  UniformDescriptor.cpp  UniformDescriptor.hpp  Utils.cpp  Utils.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VulkanTest.cpp
external-libs/: CMakeLists.txt
external-libs/assimp/code/: CMakeLists.txt
external-libs/glad/include/glad/: glad.h
external-libs/glad/src/: glad.c
external-libs/imgui/: CMakeLists.txt  imgui_impl_vulkan.cpp
external-libs/stb_image/: stb_image.cpp
kryne-engine/: CMakeLists.txt
kryne-engine-core/: CMakeLists.txt
kryne-engine-core/ke/: Application.cpp  CMakeLists.txt  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp  additional_impl.cpp
kryne-engine-core/ke/common/: Assert.hpp
kryne-engine-core/ke/graphics/: GraphicsApiContext.hpp  Texture.hpp
kryne-engine-core/ke/graphics/opengl/: CMakeLists.txt  EnumConversions.hpp  GlApiContext.cpp  GlApiContext.hpp  GlContextParameters.hpp  GlTexture.cpp  GlTexture.hpp
kryne-engine/common/: Assert.hpp  CommonTypes.hpp
kryne-engine/common/meta/: Enums.hpp
kryne-engine/core/: Application.cpp  Application.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  Window.cpp  Window.hpp
kryne-engine/graphics/core/: CMakeLists.txt  GraphicsApi.hpp  GraphicsApiContext.hpp  Texture.hpp
kryne-engine/graphics/opengl/: CMakeLists.txt  EnumConversions.hpp  GlApiContext.cpp  GlApiContext.hpp  GlContextParameters.hpp  GlGraphicsApi.cpp  GlGraphicsApi.hpp  GlTexture.cpp  GlTexture.hpp
kryne-engine/include/: KryneEngine
kryne-engine/include/KEModules/: 3DObjects.h  Camera.h  Constants.h  Core.h  Geometry.h  Input.h  Light.h  Material.h  Math.h  RenderTargets.h  Rendering.h  Textures.h  Utils.h  enums.h
kryne-engine/include/kryne-engine/: Shader.h  Texture2D.h  TextureCubeMap.h
kryne-engine/include/kryne-engine/3DObjects/: BaseObject.h  HierarchicalNode.h  Mesh.h  Object3D.h  Scene.h  Skybox.h  Transform.h
kryne-engine/include/kryne-engine/Camera/: BasicCamera.h  Camera.cpp  Camera.h  FirstPersonCamera.h  ICamera.hpp  OldCamera.h  OrbitCamera.cpp  OrbitCamera.h  OrbitControlsComponent.h  OrthographicProjectionData.hpp  PerspectiveProjectionData.hpp  ProjectionData.hpp  TrackballCamera.h
kryne-engine/include/kryne-engine/Constants/: CubeRenderMatrices.hpp  CubeVertexData.h  OpenGLTexture.hpp
kryne-engine/include/kryne-engine/Core/: AdditionalParameters.h  Component.h  Dispatcher.cpp  Dispatcher.h  Entity.h  GeometricShapes.h  LogicComponent.cpp  LogicComponent.h  OldProcess.h  Process.h  System.h  VertexArray.h  Window.h
kryne-engine/include/kryne-engine/Dispatch/: BasePool.h  ChildPool.h  Dispatcher.h  MainPool.h  RunnerPool.h  SynchronizableChildPool.h  SynchronizablePool.h  ThreadPool.h
kryne-engine/include/kryne-engine/Geometry/: BoxBufferGeometry.h  BufferAttribute.h  BufferGeometry.h  PlaneBufferGeometry.cpp  PlaneBufferGeometry.h  TorusKnotBufferGeometry.hpp
kryne-engine/include/kryne-engine/Input/: PlayerInput.h
kryne-engine/include/kryne-engine/Light/: AmbientLight.hpp  DirectionalLight.h  DirectionalLight.hpp  DirectionalLightShadowCameraComponent.hpp  HemisphereLight.hpp  Light.hpp  LightingRegistry.h  OldDirectionalLight.h  OldPointLight.h  PointLight.h
kryne-engine/include/kryne-engine/Material/: Material.h  MeshLambertMaterial.h  MeshMaterialCommon.h  MeshStandardMaterial.h  Shader.h  ShaderChunk.cpp  ShaderChunk.h  ShaderMaterial.hpp  UniformsHandler.h
kryne-engine/include/kryne-engine/Math/: AxisAlignedBox.hpp  Frustum.hpp  Plane.hpp  Sphere.hpp  (+1 more)
kryne-engine/src/: AdditionalParameters.cpp  GeometricShapes.cpp  Process.cpp  Shader.cpp  Texture2D.cpp  TextureCubeMap.cpp  VertexArray.cpp  Window.cpp  stb_image.cpp
kryne-engine/src/3DObjects/: BaseObject.cpp  HierarchicalNode.cpp  Mesh.cpp  Object3D.cpp  Scene.cpp  Skybox.cpp  Transform.cpp
kryne-engine/src/Camera/: BasicCamera.cpp  Camera.cpp  FirstPersonCamera.cpp  OrbitCamera.cpp  OrbitControlsComponent.cpp  TrackballCamera.cpp
kryne-engine/src/Core/: AdditionalParameters.cpp  Component.cpp  Dispatcher.cpp  Entity.cpp  GeometricShapes.cpp  LogicComponent.cpp  OldProcess.cpp  Process.cpp  Shader.cpp  System.cpp  VertexArray.cpp  Window.cpp
kryne-engine/src/Dispatch/: BasePool.cpp  ChildPool.cpp  Dispatcher.cpp  MainPool.cpp  RunnerPool.cpp  SynchronizableChildPool.cpp  SynchronizablePool.cpp  ThreadPool.cpp
kryne-engine/src/Geometry/: BoxBufferGeometry.cpp  BufferAttribute.cpp  BufferGeometry.cpp  PlaneBufferGeometry.cpp  TorusKnotBufferGeometry.cpp
kryne-engine/src/Input/: PlayerInput.cpp
kryne-engine/src/Light/: DirectionalLight.cpp  DirectionalLightShadowCameraComponent.cpp  HemisphereLight.cpp  LightingRegistry.cpp  OldDirectionalLight.cpp  OldPointLight.cpp  PointLight.cpp
kryne-engine/src/Material/: Material.cpp  MeshLambertMaterial.cpp  MeshMaterialCommon.cpp  MeshStandardMaterial.cpp  Shader.cpp  ShaderChunk.cpp  UniformsHandler.cpp
kryne-engine/src/RenderTargets/: FinalPostProcess.cpp  PostProcess.cpp
kryne-engine/src/Rendering/: LoopRenderer.cpp  MainRenderer.cpp  PostProcessPass.cpp  RenderMesh.cpp  RenderPass.cpp  RenderScene.cpp  Renderer.cpp  RendererSystem.cpp  Scene.cpp  ShaderProgramCompiler.cpp
kryne-engine/src/Systems/: GameLogicComponentsRunner.cpp  LightingRegistrySystem.cpp  TransformUpdateSystem.cpp
kryne-engine/src/Textures/: CubeTexture.cpp  EnvironmentMap.cpp  Texture.cpp  Texture2D.cpp  TextureCubeMap.cpp  stb_image.cpp
kryne-engine/src/UI/: DearIMGUI.cpp  DearImGui.cpp  DearImGuiPerformanceMetrics.cpp  DearImGuiSceneBrowser.cpp
kryne-engine/src/Utils/: VectorFlattening.cpp
(+3897 files in other folders)
