
add_library(DearIMGUI STATIC
        imconfig.h
        imgui.cpp
        imgui.h
        imgui_demo.cpp
        imgui_draw.cpp
        imgui_impl_glfw.cpp
        imgui_impl_glfw.h
        imgui_impl_opengl3.cpp
        imgui_impl_opengl3.h
        imgui_internal.h
        imgui_tables.cpp
        imgui_widgets.cpp
        imstb_rectpack.h
        imstb_textedit.h
        imstb_truetype.h)

set_property(TARGET DearIMGUI PROPERTY Type "External")
SetTargetFlags(DearIMGUI)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}")